[gd_scene load_steps=23 format=2]

[ext_resource path="res://MarioEnemies/Dinosaur.gd" type="Script" id=1]
[ext_resource path="res://Sprites/K_Enemy/dinosaur/dinosaur_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/K_Enemy/dinosaur/dinosaur_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/K_Enemy/dinosaur/dinosaur_4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield/shield_0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/K_Enemy/koopa_shield/shield_0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield/shield_1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield/shield_2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield/shield_3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield_death/death_0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield_death/death_1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_shield_death/death_2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_walk/walk_0.png" type="Texture" id=13]
[ext_resource path="res://Sprites/K_Enemy/koopa_green_walk/walk_1.png" type="Texture" id=14]
[ext_resource path="res://Sprites/K_Enemy/dinosaur/dinosaur_2.png" type="Texture" id=15]
[ext_resource path="res://Sprites/K_Enemy/dinosaur/dinosaur_3.png" type="Texture" id=16]
[ext_resource path="res://Sounds/MarioSounds/Nueva carpeta/smw_stomp.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/MarioSounds/Nueva carpeta/smw_shell_ricochet.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "koopa_walk_1",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "koopa_death_1",
"speed": 8.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "koopa_idle_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "koopa_shield_idle_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "koopa_shield_idle_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "koopa_shield_walk_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
"name": "koopa_death_2",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "koopa_walk_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "koopa_idle_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "koopa_shield_walk_1",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.3355
height = 20.6446

[sub_resource type="CircleShape2D" id=3]
radius = 14.251

[sub_resource type="CapsuleShape2D" id=4]
radius = 17.6104
height = 15.8413

[node name="Turtle" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "koopa_idle_1"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.79 )
shape = SubResource( 2 )

[node name="CollisionShape2DShield" type="CollisionShape2D" parent="."]
position = Vector2( 0, 17 )
shape = SubResource( 3 )
disabled = true

[node name="RayCastBorde" type="RayCast2D" parent="."]
position = Vector2( 12, 14 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="TouchBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchBody"]
position = Vector2( 0, 6 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Sounds" type="Node" parent="."]

[node name="stomp" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = -3.0

[node name="hit" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 18 )
volume_db = -5.0

[connection signal="body_entered" from="TouchBody" to="." method="_on_TouchBody_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
